# fastIPAV

./: .gitignore  Cargo.toml  README.md
backends/gst/: Cargo.toml
backends/gst/src/: lib.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  metrics.rs  net.rs  observability.rs
configs/: rx.default.toml  rx.pi.toml  rx.smoketest.toml  tx.default.toml  tx.pi.toml  tx.smoketest.toml
rx/: Cargo.toml
rx/src/: main.rs
scripts/: install.sh  package-release.sh
systemd/: avoverip-rx.service  avoverip-tx.service
tools/: fetch-stats.sh
tx/: Cargo.toml
tx/src/: main.rs
